# wasabi-engine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  wasabi-engine.cbp
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/src/wasabi/: Makefile  cmake_install.cmake  wasabi-engine-main
Debug/src/wasabi/core/: Makefile  cmake_install.cmake
Debug/src/wasabi/physics/: Makefile  cmake_install.cmake
Debug/src/wasabi/renderer/: Makefile  cmake_install.cmake
cmake/SFML/: SFMLConfig.cmake
src/wasabi/: CMakeLists.txt  Scene.cpp  compile_flags.txt  main.cpp  wasabi-engine-main
src/wasabi/.cache/clangd/index/: ComponentContainer.hpp.6E031B973A959A84.idx  ComponentsSupervisor.hpp.5FC9A9F4AF8BDFE5.idx  Config.cpp.249D19413B5C7C81.idx  Config.hpp.5CCAB96906B072B5.idx  Constants.hpp.0B553349671F9FDC.idx  Container.cpp.931BE8FAC23A4B25.idx  Container.hpp.27A09F689A4D930A.idx  EntitiesSupervisor.hpp.AC8879408FBDC2C1.idx  Entity.hpp.202973BA7ACB5F0A.idx  Event.hpp.C443BCEA7776CE8B.idx  EventVisitor.hpp.15A377E50E350435.idx  EventsStack.cpp.3FE845E002B27591.idx  EventsStack.hpp.BD49A48A9D20CE3C.idx  FileUtils.cpp.8D0F14FAAD7D4F8E.idx  FileUtils.hpp.2E415FB2C2572AB2.idx  Mesh.hpp.D6CB83F2A314B0FC.idx  MouseClickEvent.hpp.7B159A1B9285162C.idx  Object.hpp.E162F8F7F2E7D750.idx  OnCloseEvent.hpp.76746F3B361EF720.idx  Renderer.hpp.529727CDBA2A201B.idx  SFMLWindow.cpp.AEA8BD31502ACCEB.idx  SFMLWindow.hpp.FDE0B93A9C28BC9B.idx  Scene.cpp.2AFD4B6D93D182E8.idx  Scene.hpp.845628377EFA41F6.idx  Shape.hpp.538FE3F5505EFF9C.idx  ShapesRenderingSystem.cpp.3E5FC9A305AAD8F2.idx  ShapesRenderingSystem.hpp.D15C7D87D874AED8.idx  Transform.hpp.4FDF8FE9993A3CEA.idx  VulkanRenderer.cpp.E548913183FB9764.idx  VulkanRenderer.hpp.B3D5D113280F1BB3.idx  VulkanUtils.cpp.D2A0177E6CAF1EA5.idx  VulkanUtils.hpp.61DB18D0496BAD47.idx  WasabiEngine.cpp.0E2E0CFE8CFE4180.idx  WasabiEngine.hpp.D575D04A67616F61.idx  Window.hpp.CE26EB3167008E4B.idx  WindowBuilder.cpp.8571745C7B8111D5.idx  WindowBuilder.hpp.F5CE54EDE767A6CD.idx  WindowHandle.hpp.804704291A7A8256.idx  WorldSupervisor.cpp.028FCE8442DBB5A5.idx  WorldSupervisor.hpp.1E007E992FFE63BC.idx  (+2 more)
src/wasabi/components/include/components/: Mesh.hpp  Movement.hpp  Shape.hpp  Transform.hpp
src/wasabi/core/: CMakeLists.txt  EventsStack.cpp  GLFWWindow.cpp  Object.cpp  SFMLWindow.cpp  WasabiEngine.cpp  Window.cpp  WindowBuilder.cpp
src/wasabi/core/details/: Container.cpp
src/wasabi/core/ecs/: CMakeLists.txt  WorldSupervisor.cpp
src/wasabi/core/ecs/include/ecs/: Entity.hpp
src/wasabi/core/ecs/include/ecs/detail/: ComponentContainer.hpp  ComponentsSupervisor.hpp  Container.hpp  EntitiesSupervisor.hpp
src/wasabi/core/include/core/: Event.hpp  EventVisitor.hpp  EventsStack.hpp  GLFWWindow.hpp  MouseClickEvent.hpp  Object.hpp  OnCloseEvent.hpp  SFMLWindow.hpp  WasabiEngine.hpp  Window.hpp  WindowBuilder.hpp
src/wasabi/ecs/: CMakeLists.txt
src/wasabi/ecs/include/ecs/: WorldSupervisor.hpp
src/wasabi/ecs/include/ecs/detail/: ComponentContainer.hpp  ComponentsSupervisor.hpp  EntitiesSupervisor.hpp
src/wasabi/ecs/include/ecs/detail/utils/: Constants.hpp
src/wasabi/include/: Actor.hpp  Object.hpp  Scene.hpp
src/wasabi/platform/: CMakeLists.txt  Config.cpp  libwasabi-platform.dylib
src/wasabi/platform/include/platform/: Config.hpp  WindowHandle.hpp
src/wasabi/rendering/: CMakeLists.txt  VulkanRenderer.cpp
src/wasabi/rendering/details/: VulkanUtils.cpp
src/wasabi/rendering/details/linux/: VulkanLinuxUtils.cpp
src/wasabi/rendering/details/macos/: VulkanMacOsUtils.cpp
src/wasabi/rendering/details/win/: VulkanWinUtils.cpp
src/wasabi/rendering/include/rendering/: Renderer.hpp  VulkanRenderer.hpp
src/wasabi/rendering/include/rendering/details/: VulkanUtils.hpp
src/wasabi/rendering/include/rendering/details/linux/: VulkanLinuxUtils.hpp
src/wasabi/rendering/include/rendering/details/macos/: VulkanMacOsUtils.hpp
src/wasabi/rendering/include/rendering/details/win/: VulkanWinUtils.hpp
src/wasabi/rendering/include/rendering/systems/: ShapesRenderingSystem.hpp
src/wasabi/rendering/systems/: ShapesRenderingSystem.cpp
src/wasabi/shaders/: FragmentShader.frag  VertexShader.vert
src/wasabi/utils/: CMakeLists.txt  FileUtils.cpp  libwasabi-utils.dylib
src/wasabi/utils/include/utils/: FileUtils.hpp  defs.hpp
